--- a/structuring and cleaning scraped data.ipynb
+++ b/structuring and cleaning scraped data.ipynb
@@ -10584,7 +10584,7 @@
    "id": "578b2578-a9fb-45fe-9d1f-4d7956616c5b",
    "metadata": {},
    "source": [
-    "### Exptrating the final tags using TF-IDF"
+    "### Extracting the final tags using TF-IDF"
    ]
   },
   {
